# P4TG

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  SDE.md  index.html  openapi.json  p4tg.service  p4tg.sh
.github/workflows/: deploy-api-docs.yml  docker-image-nightly.yml  docker-image.yml  docker-sde-image.yml
Configuration GUI/: Dockerfile  docker-compose.yml  package-lock.json  package.json
Configuration GUI/public/: index.html
Configuration GUI/src/: App.tsx  config.ts  (+1 more)
Controller/: Cargo.toml  Dockerfile  config.json  controller.py  deny.toml  docker-compose.yaml  docker-compose.yml  docker-compose_remote.yaml  requirements.txt
Controller/api/: server.py
Controller/api/endpoints/: online.py  ports.py  reset.py  statistics.py  tables.py  trafficgen.py
Controller/gui_build/: asset-manifest.json  index.html
Controller/gui_build/static/css/: main.1269818f.css  main.1269818f.css.map  main.1cd4d233.css  main.1cd4d233.css.map  main.3d9bf4eb.css  main.3d9bf4eb.css.map  main.4c777b6b.css  main.4c777b6b.css.map  main.553f51fa.css  main.553f51fa.css.map  main.584e76a8.css  main.584e76a8.css.map  main.8669fc04.css  main.8669fc04.css.map  main.ae6061d0.css  main.ae6061d0.css.map  main.be365f4e.css  main.be365f4e.css.map  main.e57e0665.css  main.e57e0665.css.map  main.e96ea178.css  main.e96ea178.css.map
Controller/gui_build/static/js/: 213.1276bd44.chunk.js  213.1276bd44.chunk.js.map  239.dfdb0d71.chunk.js  239.dfdb0d71.chunk.js.map  732.9a305367.chunk.js  732.9a305367.chunk.js.map  main.0356dcbc.js  main.0356dcbc.js.map  main.0c3eef2e.js  main.0c3eef2e.js.map  main.0ce1821a.js  main.0ce1821a.js.map  main.0e5ac155.js  main.0e5ac155.js.map  main.14303157.js  main.14303157.js.map  main.14da8d54.js  main.14da8d54.js.LICENSE.txt  main.14da8d54.js.map  main.1a0d1ba7.js  main.1a0d1ba7.js.map  main.1efe0ec3.js  main.1efe0ec3.js.map  main.24080597.js  main.24080597.js.map  main.270f68de.js  main.270f68de.js.map  main.2915d72f.js  main.2915d72f.js.map  main.2c860d74.js  main.2c860d74.js.map  main.2facf17f.js  main.2facf17f.js.map  main.355efdbe.js  main.3962922e.js  main.3962922e.js.map  main.3aae4ba3.js  main.3aae4ba3.js.map  main.3b863d05.js  main.3b863d05.js.map  (+99 more)
Controller/libs/: FrameMonitoring.py  FrameTypeMonitoring.py  MulticastConfiguration.py  PortManager.py  RateMonitor.py  Switch.py  ThriftConnection.py  TrafficGen.py
Controller/libs/packet_formats/: Ethernet.py  IPv4.py  Monitor.py  P4TG.py  Packet.py  UDP.py
Controller/src/: main.rs
Controller/src/api/: config.rs  histogram.rs  mod.rs  multiple_traffic_gen.rs  online.rs  ports.rs  profiles.rs  reset.rs  restart.rs  rfc_tests.rs  server.rs  statistics.rs  tables.rs  traffic_gen.rs
Controller/src/api/docs/: doc_route.rs  extractor.rs  histogram.rs  mod.rs  online.rs  ports.rs  reset.rs  restart.rs  statistics.rs  tables.rs  traffic_gen.rs
Controller/src/api/helper/: duration_monitor.rs  mod.rs  serve_static_files.rs  simple_stats.rs  validate.rs
Controller/src/core/: arp.rs  config.rs  duration_monitor.rs  frame_size_monitor.rs  frame_type_monitor.rs  histogram_monitor.rs  mod.rs  multicast.rs  patterns.rs  ports.rs  rate_monitor.rs  rtt_histogram_monitor.rs  statistics.rs  traffic_gen.rs
Controller/src/core/traffic_gen_core/: const_definitions.rs  event.rs  helper.rs  mod.rs  optimization.rs  types.rs
Controller/src/error/: mod.rs
P4-Implementation/: Makefile  traffic_gen.p4
docs/: CHANGELOG.md  INSTALL.md  asterfusion.md  edgecore.md
p4tg_test_automation/: README.md  requirements.txt  run.py
(+118 files in other folders)
