[package]
name = "p4tg-controller"
authors = ["Steffen Lindner <steffen@steffen-lindner.net>"]
version = "2.3.0"
edition = "2021"
license = "Apache-2.0"


[dependencies]
rbfrt = { git = "https://github.com/uni-tue-kn/rbfrt", branch = "dev" }
tokio = { version = "1.20.1", features = ["rt-multi-thread"]}
axum = { version = "0.7.4" , features =  ["macros", "json"]}
tower-http = { version = "0.5.2", features = ["cors"] }
log = "0.4"
env_logger = "0.11.3"
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_repr = "0.1"
tower = { version = "0.4.13", features = ["full"] }
highs = "1.5.1"
etherparse = "0.13.0"
rand = "0.8.5"
async-trait = "0.1.74"
thiserror = "1.0.50"
macaddr = "1.0.1"
axum-extra = "0.7.4"
axum-jsonschema = { version = "0.7.0", features = [
    "aide",
] }
schemars = { version = "0.8.10", features = ["uuid1"] }
axum-macros = "0.3.0"
serde_json = "1.0.108"
include_dir = "0.7.3"
mime_guess = "2.0.4"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = {  version = "6.0.0", features = ["axum"]}
lazy_static = "1.4.0"
