[package]
name = "p4tg-controller"
authors = ["Steffen Lindner <steffen@steffen-lindner.net>", "Fabian Ihle <fabian.ihle@uni-tuebingen.de"]
version = "2.3.3"
edition = "2021"
license = "Apache-2.0"


[dependencies]
rbfrt = { git = "https://github.com/uni-tue-kn/rbfrt" }
tokio = { version = "1.44.2", features = ["full"]}
axum = { version = "0.8.3" , features =  ["macros", "json", "tokio", "form", "query"]}
tower-http = { version = "0.6.2", features = ["cors"] }
log = "0.4"
env_logger = "0.11.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_repr = "0.1.20"
tower = { version = "0.5.2", features = ["full"] }
highs = "1.8.0"
etherparse = "0.13.0"
rand = "0.9.1"
async-trait = "0.1.88"
thiserror = "2.0.12"
macaddr = "1.0.1"
axum-extra = "0.10.1"

console-subscriber = "0.4.1"
schemars = { version = "0.8.22", features = ["uuid1"] }
axum-macros = "0.5.0"
serde_json = "1.0.140"
include_dir = "0.7.4"
mime_guess = "2.0.5"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = {  version = "9.0.1", features = ["axum"]}
lazy_static = "1.5.0"
tokio-util = "0.7.15"

[dev-dependencies]
test-case = "3.3.1"
