[package]
name = "p4tg-controller"
authors = ["Steffen Lindner <steffen@steffen-lindner.net>", "Fabian Ihle <fabian.ihle@uni-tuebingen.de"]
version = "2.6.2"
edition = "2021"
license = "Apache-2.0"


[dependencies]
rbfrt = { git = "https://github.com/uni-tue-kn/rbfrt" }
tokio = { version = "1.47.1", features = ["rt-multi-thread"]}
axum = { version = "0.8.4" , features =  ["macros", "json", "tokio", "form", "query"]}
tower-http = { version = "0.6.2", features = ["cors"] }
log = "0.4.28"
env_logger = "0.11.3"
serde = { version = "1.0.226", features = ["derive", "rc", "alloc"] }
serde_repr = "0.1.20"
tower = { version = "0.5.2", features = ["full"] }
highs = "1.12.0"
etherparse = "0.13.0"
rand = "0.9.2"
async-trait = "0.1.89"
thiserror = "2.0.16"
macaddr = "1.0.1"
axum-extra = "0.10.1"
schemars = { version = "1.0.4", features = ["uuid1"] }
axum-macros = "0.5.0"
serde_json = "1.0.145"
include_dir = "0.7.4"
mime_guess = "2.0.5"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = {  version = "9.0.2", features = ["axum"]}
lazy_static = "1.5.0"
tokio-util = "0.7.16"

[dev-dependencies]
test-case = "3.3.1"